# nbody-test

./: LICENSE  nbody.cabal
app/: Main.hs
shaders/: compute.glsl  physics.glsl  vertex.glsl
src/: GLUtils.hs  Lib.hs
