name:                nbody
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Cahu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , linear
                     , random
                     , OpenGL >= 3.0.1.0  && < 3.1
                     , GLUT   >= 2.7.0.10 && < 2.8
  default-language:    Haskell2010

executable nbody-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , nbody
                     , vector
                     , linear
                     , random
                     , bytestring
                     , OpenGL >= 3.0.1.0  && < 3.1
                     , GLUT   >= 2.7.0.10 && < 2.8
  default-language:    Haskell2010
